Created recipe type for purifier recipes, added rei/jei plugin for purifier recipes
Signed-off-by: LtxPgm <ltxprogrammer@outlook.com>